--- a/06-uvod-v-latex/urnik/urnik.tex
+++ b/06-uvod-v-latex/urnik/urnik.tex
@@ -9,7 +9,7 @@
 \usepackage[slovene]{babel}
 \usepackage{lmodern} 
 \usepackage{hyperref}
-
+\usepackage{amsmath}
 \begin{document}
 
 % Pri tej nalogi (in tudi vseh naslednjih) si pomagajte s paleto ukazov!
@@ -23,7 +23,7 @@
 \maketitle
 % začetek povzetka
 \begin{abstract}
-V članku so predstavljeni nekateri postopki za avtomatsko izdelavo urnikov. Opisani so
+V članku so predstavljeni nekateri postopki za avtomatsk o izdelavo urnikov. Opisani so
 potrebni vhodni podatki, naštete so omejitve, ki jih je potrebno upoštevati pri izdelavi
 urnikov, predstavljena je tudi metoda merjenja kakovosti izdelanega urnika.  
 \end{abstract}
@@ -113,20 +113,20 @@ katere podatke naj vsebujejo.
 \begin{itemize}
     
 
-   \item Razred /Profesor/ vsebuje osebne podatke profesorja (ime in priimek) ter
+   \item Razred \textit{Profesor} vsebuje osebne podatke profesorja (ime in priimek) ter
    podatke o predmetih, ki jih predava. Hkrati moramo za vsako uro v tednu vedeti, če
    je profesor takrat že zaseden, da mu slučajno ne bi dodelili dveh predavanj v istem
    časovnem terminu. To je najlažje preverjati s pomočjo tabele zasedenosti, ki je
    podrobneje opisana na koncu poglavja.
 
-   \item Razred /Skupina/ predstavlja skupino študentov. Kot podatke torej potrebujemo
-   smer skupine (npr. pedagoška matematika) ter število študentov v njej. Podobno kot pri
+   \item Razred \textit{Skupina} predstavlja skupino študentov. Kot podatke torej potrebujemo
+   smer skupine (npr.pedagoška matematika) ter število študentov v njej. Podobno kot pri
    profesorjih, tudi tukaj potrebujemo tabelo zasedenosti.
 
-   \item Razred /Predavalnica/ nosi podatke o kapaciteti predavalnice, njeno oznako
+   \item Razred \textit{Predavalnica} nosi podatke o kapaciteti predavalnice, njeno oznako
    ter podatke o zasedenosti, ki so predstavljeni s tabelo.
 
-   \item Razred /Predmet/ vsebuje podatke o posameznih predmetih. Kot podatke tega
+   \item Razred \textit{Predmet} vsebuje podatke o posameznih predmetih. Kot podatke tega
    objekta je smiselno navesti ime predmeta ter tedensko število ur njegove izvedbe.
    Zanima nas tudi, katerim skupinam je predmet namenjen, ter v katerem semestru se bo
    predaval.
@@ -137,9 +137,9 @@ katere podatke naj vsebujejo.
 Kar pri treh razredih je kot podatek navedena tabela zasedenosti, zato si jo podrobneje
 oglejmo. Vsako tabelo določata njena velikost ter tip vrednosti. Naslednji izračun nam
 poda velikost tabele:
-\begin{displaymath}
-   velikostTabele = številoUrNaDan \cdot številoDelovnihDni
-\end{displaymath}
+\[
+   \text{velikostTabele} = \text{številoUrNaDan} \cdot \text{številoDelovnihDni}
+\]
 Če bi predpostavili, da študijski dan traja od sedme ure zjutraj do osmih zvečer in da
 imamo pet delovnih dni, je velikost naše tabele 65 polj. Velikost te tabele torej pove,
 koliko ur na teden obravnavamo. Ker se šolski tedni periodično ponavljajo, je seveda
@@ -177,8 +177,8 @@ Poglejmo si nekaj omejitev, ki jih urnik ne sme kršiti:
    \item Nobena skupina ne sme imeti več predavanj hkrati.
    \item Nobena predavalnica ne sme biti dodeljena večim predavanjem hkrati.
    \item Predavalnica mora imeti zadostno kapaciteto.
-   \item Predavanja posebne vrste (npr. vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
-   \item Urnik mora zadoščati zastavljenemu časovnemu okvirju (npr. od sedmih zjutraj do osmih zvečer).
+   \item Predavanja posebne vrste (npr.vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
+   \item Urnik mora zadoščati zastavljenemu časovnemu okvirju (npr.od sedmih zjutraj do osmih zvečer).
 \end{itemize}
 % konec okolja itemize
 %
@@ -190,7 +190,7 @@ krši nobenega izmed zgoraj naštetih načel, a še zdaleč ne ustreza merilom k
 %
 Algoritem je najbolje implementirati tako, da do kršenja strogih omejitev sploh ne more priti.
 Tabela zasedenosti je dober primer pametne implementacije, saj tako že v osnovi  preprečujemo
-dodeljevanje t.i. prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
+dodeljevanje t.i.prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
 mora najprej v tabeli zasedenosti preveriti, če je v tistem terminu le-ta še na voljo,
 sicer se vstavljanje ne izvede.
 
@@ -337,21 +337,21 @@ zato si je smiselno podrobneje ogledati posamezne korake.
 %
 \begin{enumerate} 
    \item Z zanko se sprehodimo po vektorju vseh predmetov. Predmet na \(i\)-tem koraku
-   označimo s \(predmet_1\).
+   označimo s \(\text{predmet}_1\).
 
    \item Naslednja vgnezdena zanka nas popelje po vseh predavalnicah. Predavalnico na
-   \(j\)-tem koraku označimo s \(predavalnica_j\).
+   \(j\)-tem koraku označimo s \(\text{predavalnica}_j\).
 
-   \item Za vse proste termine \(predavalnice_j\) izračunamo ceno vstavljanja
-   \(srečanja_i\), ki ga sestavlja \(predmet_ij\), profesor, ki ta predmet predava,
+   \item Za vse proste termine \(\text{predavalnice}_j\) izračunamo ceno vstavljanja
+   \(\text{srečanja}_i\), ki ga sestavlja \(\text{predmet}_ij\), profesor, ki ta predmet predava,
    ter skupina, kateri je predmet namenjen.
 
   \item Če je trenutna cena boljša od najboljše dosedanje, potem najboljša dosedanja
    dobi vrednost trenutne. Hkrati si zapomnimo, za kateri termin smo izračunali ceno
-   vstavljanja, da bomo \(predmet_ij\) na koncu vstavili v termin z najboljšo
+   vstavljanja, da bomo \(\text{predmet}_ij\) na koncu vstavili v termin z najboljšo
    ceno vstavljanja.
 
-   \item Ko preverimo vse proste termine vseh predavalnic, vstavimo \(srečanje_j\)
+   \item Ko preverimo vse proste termine vseh predavalnic, vstavimo \(\text{srečanje}_j\)
    v termin z najboljšo ceno.
 
    \item Sedaj se ponovno vrnemo na začetek in pogledamo najugodnejši termin za naslednji
@@ -428,7 +428,7 @@ korakov, in si šele nato ogledajo njihov natančen opis.
    ustavitveni pogoj je zadovoljivo velika vrednost kriterijske funkcije.
 
    \item Naključno izberemo okolico trenutne rešitve. Z okolico izberemo tudi operacijo,
-   ki jo izvajamo na tem koraku (npr. zamenjava dveh srečanj).
+   ki jo izvajamo na tem koraku (npr.zamenjava dveh srečanj).
 
    \item Če v tem koraku izberemo tisto zamenjavo srečanj, ki izmed vseh možnih najbolj
    poveča vrednost kriterijske funkcije, potem postopamo enako, kot požrešna metoda. Če
@@ -474,7 +474,7 @@ izbiro spremembe preveri, če je vsebovana v seznamu prepovedanih sprememb. Pogl
 je takšno postopanje smiselno.
 
 Naj bo \(n -- 100\) ter \(s_1\) sprememba urnika, ki nas je pripeljala v lokalni maksimum. To
-spremembo (npr. zamenjava \(srečanja_i\) in \(srečanja_j\)) sedaj shranimo v
+spremembo (npr.zamenjava \(\text{srečanja}_i\) in \(\text{srečanja}_j\)) sedaj shranimo v
 seznam tabujev. V naslednjem koraku izvedemo spremembo \(s_2\), ki se prav tako shrani v
 seznam prepovedanih sprememb. Podobno naredimo za vse spremembe v nadaljnih korakih. S
 tem poskrbimo, da se lahko v isti lokalni maksimum vrnemo šele čez \(n -- 100\) korakov, saj
